--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\PageController.cs" />
     <Compile Include="Controllers\ParkingController.cs" />
+    <Compile Include="Controllers\PhoneCameraController.cs" />
     <Compile Include="Controllers\RainController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\SomeRule.cs" />
@@ -360,8 +361,17 @@
     <Compile Include="Migrations\201708211806250_asdfasdf.Designer.cs">
       <DependentUpon>201708211806250_asdfasdf.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708270859315_asdrfd.cs" />
+    <Compile Include="Migrations\201708270859315_asdrfd.Designer.cs">
+      <DependentUpon>201708270859315_asdrfd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708271513082_aweqr3qe44.cs" />
+    <Compile Include="Migrations\201708271513082_aweqr3qe44.Designer.cs">
+      <DependentUpon>201708271513082_aweqr3qe44.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Camera.cs" />
     <Compile Include="Models\Children.cs" />
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\Copy.cs" />
@@ -388,6 +398,7 @@
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Page.cs" />
     <Compile Include="Models\Parking.cs" />
+    <Compile Include="Models\Phone.cs" />
     <Compile Include="Models\Plant.cs" />
     <Compile Include="Models\Rain.cs" />
     <Compile Include="Models\Referral.cs" />
@@ -400,6 +411,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\CoverLetterViewModel.cs" />
+    <Compile Include="ViewModel\PhoneCameraViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Client Scripts\mvcfoolproof.unobtrusive.js" />
@@ -559,6 +571,7 @@
     <Content Include="Views\Home\ForManager.cshtml" />
     <Content Include="Views\Home\ForOwner.cshtml" />
     <Content Include="Views\CoverLetter\Create.cshtml" />
+    <Content Include="Views\PhoneCamera\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -693,6 +706,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708211806250_asdfasdf.resx">
       <DependentUpon>201708211806250_asdfasdf.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708270859315_asdrfd.resx">
+      <DependentUpon>201708270859315_asdrfd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708271513082_aweqr3qe44.resx">
+      <DependentUpon>201708271513082_aweqr3qe44.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
