--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IndustriesWebsiteController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ManagerWorkerController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\PageController.cs" />
     <Compile Include="Controllers\ParkingController.cs" />
@@ -373,6 +374,18 @@
     <Compile Include="Migrations\201708271551165_qwqer2.Designer.cs">
       <DependentUpon>201708271551165_qwqer2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708271615519_arfqew.cs" />
+    <Compile Include="Migrations\201708271615519_arfqew.Designer.cs">
+      <DependentUpon>201708271615519_arfqew.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708271636363_asfre3q.cs" />
+    <Compile Include="Migrations\201708271636363_asfre3q.Designer.cs">
+      <DependentUpon>201708271636363_asfre3q.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708271647001_csa.cs" />
+    <Compile Include="Migrations\201708271647001_csa.Designer.cs">
+      <DependentUpon>201708271647001_csa.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Camera.cs" />
@@ -399,6 +412,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\IndustriesWebsiteViewModel.cs" />
     <Compile Include="Models\Industry.cs" />
+    <Compile Include="Models\Manager.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MyViewModel.cs" />
     <Compile Include="Models\Order.cs" />
@@ -411,12 +425,15 @@
     <Compile Include="Models\Song.cs" />
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\Standard.cs" />
+    <Compile Include="Models\Store.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Models\Website.cs" />
+    <Compile Include="Models\Worker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\CoverLetterViewModel.cs" />
+    <Compile Include="ViewModel\ManagerWorkerViewModel.cs" />
     <Compile Include="ViewModel\PhoneCameraViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -578,6 +595,7 @@
     <Content Include="Views\Home\ForOwner.cshtml" />
     <Content Include="Views\CoverLetter\Create.cshtml" />
     <Content Include="Views\PhoneCamera\Create.cshtml" />
+    <Content Include="Views\ManagerWorker\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -721,6 +739,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708271551165_qwqer2.resx">
       <DependentUpon>201708271551165_qwqer2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708271615519_arfqew.resx">
+      <DependentUpon>201708271615519_arfqew.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708271636363_asfre3q.resx">
+      <DependentUpon>201708271636363_asfre3q.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708271647001_csa.resx">
+      <DependentUpon>201708271647001_csa.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
